@@ -7,6 +7,7 @@ import com.google.common.collect.Multiset;
 import com.google.common.io.Closer;
 import io.airlift.http.client.HttpClient.HttpResponseFuture;
 import io.airlift.http.client.StatusResponseHandler.StatusResponse;
+import io.airlift.http.client.StreamingResponseHandler.StreamingResponse;
 import io.airlift.http.client.StringResponseHandler.StringResponse;
 import io.airlift.http.client.jetty.JettyHttpClient;
 import io.airlift.units.Duration;
@@ -17,6 +18,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.api.parallel.Execution;
 
+import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
@@ -64,6 +66,7 @@ import static io.airlift.http.client.Request.Builder.preparePut;
 import static io.airlift.http.client.ResponseHandlerUtils.propagate;
 import static io.airlift.http.client.StatusResponseHandler.createStatusResponseHandler;
 import static io.airlift.http.client.StreamingBodyGenerator.streamingBodyGenerator;
+import static io.airlift.http.client.StreamingResponseHandler.streamingResponseHandler;
 import static io.airlift.http.client.StringResponseHandler.createStringResponseHandler;
 import static io.airlift.testing.Assertions.assertBetweenInclusive;
 import static io.airlift.testing.Assertions.assertGreaterThanOrEqual;
@@ -601,6 +604,26 @@ public abstract class AbstractHttpClientTest
 
             int statusCode = executeRequest(server, request, createStatusResponseHandler()).getStatusCode();
             assertThat(statusCode).isEqualTo(543);
+        }
+    }
+
+    @Test
+    public void testStreamingResponseHandler()
+            throws Exception
+    {
+        try (CloseableTestHttpServer server = newServer()) {
+            server.servlet().setResponseBody(LARGE_CONTENT);
+
+            Request request = prepareGet()
+                    .setUri(server.baseURI())
+                    .build();
+
+            try (StreamingResponse streamingResponse = executeRequest(server, request, streamingResponseHandler())) {
+                ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+                streamingResponse.write(outputStream);
+                String responseString = outputStream.toString(UTF_8);
+                assertThat(responseString).isEqualTo(LARGE_CONTENT);
+            }
         }
     }
 
